# note-taker-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist  README.md  dreamy-churning-ritchie.md  project.md
.kilo/plans/: 1775690849361-gentle-planet.md
bar/: Info.plist  Info.plist.in
docs/: 2026-04-21-review.md  DISTRIBUTION.md  project.md
scripts/: build.sh  download_model.sh  start.sh
src/: app_controller.cpp  app_controller.h  app_delegate.h  app_delegate.mm  app_logger.h  app_logger.mm  app_status.h  audio_capture.h  audio_capture.mm  bar_main.mm  chunk_assembler.cpp  chunk_assembler.h  constants.h  dictation_history.cpp  dictation_history.h  event_tap.h  event_tap.mm  main.cpp  mode_machine.cpp  mode_machine.h  output_writer.cpp  output_writer.h  text_injector.h  text_injector.mm  vad.cpp  vad.h  wav_writer.cpp  wav_writer.h  whisper_worker.cpp  whisper_worker.h
tests/: chunk_assembler_test.cpp  dictation_history_test.cpp  mode_machine_test.cpp  output_writer_test.cpp  vad_test.cpp  wav_writer_test.cpp  whisper_worker_test.cpp
